# mirage

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: test_2d.mtl
src/: app.rs  main.rs  mirage.rs
src/assets/: asset_handle.rs  asset_impl.rs  assets.rs  geom.rs  material.rs  mod.rs  texture.rs
src/gpu/: device.rs  forward_renderer.rs  gpu.rs  layout_desc.rs  mod.rs  simple_pass.rs  simple_pass_object.rs  swap_chain.rs  vk_context.rs  vk_device_context.rs
src/loaders/: gltf.rs  mod.rs  simple.rs
src/math/: euler.rs  mat.rs  mat2.rs  mat3.rs  mat4.rs  mod.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs  vector.rs
src/mirage/: device.rs  forward_renderer.rs  simple_pass.rs  simple_pass_object.rs  swap_chain.rs
src/renderer/: forward_renderer.rs  geom.rs  gpu.rs  gpu_assets.rs  gpu_geom.rs  gpu_pipeline.rs  gpu_texture.rs  material.rs  mod.rs  object.rs  render_object.rs  shader_node.rs  shading.rs  shading_def.rs  simple_pass.rs  simple_pass_object.rs  swap_chain.rs  texture.rs  utils.rs  vertex.rs  vk_context.rs  vk_device_context.rs
src/scene/: mod.rs  vertex.rs
src/scene/comps/: camera.rs  mod.rs  relation.rs  static_mesh.rs  transform.rs
src/scene/ecs/: comp.rs  entity.rs  mod.rs  query.rs  scheduler.rs  system.rs  world.rs
src/shaders/: simple.wgsl
