[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
winit = { version = "0.29.4", default-features = false, features = [
    "rwh_05",
    "x11",
    "wayland",
    "wayland-dlopen",
    "wayland-csd-adwaita"
] }
raw-window-handle = "0.5.2"
image = "0.24.8"
log = "0.4.20"
tobj = "4.0.1"
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path"] }
naga = "0.19.0"
regex = "1.10.3"

[build-dependencies]
regex = "1.10.3"
