[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = "0.30.0"
raw-window-handle = "0.6.2"
image = "0.25.1"
log = "0.4.20"
tobj = "4.0.1"
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path"] }
naga = "0.20.0"
regex = "1.10.3"

[build-dependencies]
regex = "1.10.3"
